discussion/kv_engine/155181/155181_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

Refactor: Move from void to CookieIface for cookie pointers

This patch was created using the following steps:
1. find . -name ‘*.h’ -exec gsed -i 's/void[\s]*\*/CookieIface\*/g' {}
\;
2. find . -name '*.cc' -exec gsed -i 's/void[\s]*\*/CookieIface\*/g' {}
\;
3. Add for dec of CookieIface when needed
4. Add static_cast<const void*>() to any Cookie* being passed to
 spdlogger.
5. Roll back any invalid modifications from void* to CookieIface (e.g
in TopKeys or KVStore interfaces).
6. Revert any changes to engine_common.h to keep the AddStatFn and
AddResponseFn callback definitions the same. As we pass multiple data
types over the cookie arg.
7. Fix clang-tidy warnings related to the changes in the patch
8. This also refactors TopKeysTest::testWithNKeys() so it doesn't use
the cookie arg to test the number dump keys called. Instead use a lambda
and bind to the count var.

Change-Id: I26c4c8b2a0c040c43d5afad4aaccd4f4aa749387

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-06-08 09:04:57.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-08 09:56:41.000000000
Message: 
Patch Set 6: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9582/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/mcaudit.cc:20:10: error: "memcached_audit_events.h" file not found [clang-diagnostic-error]
#include "memcached_audit_events.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/engine_fixture.h:15:10: error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
#include <benchmark/benchmark.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/active_stream.h:19:10: error: "spdlog/common.h" file not found [clang-diagnostic-error]
#include <spdlog/common.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/passive_stream.h:14:10: error: "spdlog/common.h" file not found [clang-diagnostic-error]
#include "spdlog/common.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/cbstat_collector.h:17:10: error: "spdlog/fmt/fmt.h" file not found [clang-diagnostic-error]
#include <spdlog/fmt/fmt.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/stats.def.h:131:10: error: "stats_config.def.h" file not found [clang-diagnostic-error]
#include "stats_config.def.h" // NOLINT(*)
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/logger/logger.h:28:10: error: "spdlog/fmt/ostr.h" file not found [clang-diagnostic-error]
#include <spdlog/fmt/ostr.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/magma.h:29:10: error: "spdlog/spdlog.h" file not found [clang-diagnostic-error]
#include <spdlog/spdlog.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9582/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/mcaudit.cc:20:10:
error: "memcached_audit_events.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9582/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8180/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36536/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/126/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31222/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11158/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11306/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11578/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19161/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10229/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2021-06-08 11:00:21.000000000
Message: 
Patch Set 6: Verified+1

Overriding -1 from clang_tidy due to the errors being not related to this patch. And are latent include issues
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2021-06-08 11:00:27.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
